codex-tests/snapshots/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__voice_live_transcript_and_stream.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                            "
"• Agent answer arriving                                     "
"                                                            "
"                                                            "
"› pick a number                                             "
"                                                            "
"                                                            "
"                                                            "
" voice ● listening              ctrl+x mute     /voice stop "
"                                                            "
"› Ask Mightling to do anything                                 "
"                                                            "
"  GPT-5.6-Sol default · /tmp/project                        "
